<resources>
    <string name="app_name">MyWonderfulMoneyControl</string>

    <!-- Widgets -->
    <string name="btCate">+ Cate</string>
    <string name="rbIngreso">Ingreso</string>
    <string name="rbGasto">Gasto</string>
    <string name="btnCrear">Crear</string>

    <!-- Widgets Labels -->
    <string name="tvFiltroFecha">Filtrar Fecha</string>
    <string name="tvFiltroCat">Filtrar Categoria</string>

    <string name="tvGasto">Gasto</string>
    <string name="tvFecha">Fecha</string>
    <string name="tvCategoria">Categoria</string>
    <string name="tvTipo">Tipo de Movimiento</string>
    <string name="tvImporte">Importe</string>
    <string name="tvLocalizacion">Localizar</string>

    <string name="tvFoto">Foto Recibo</string>
    <string name="lblTipo">Tipo: </string>
    <string name="lblCategoroa">Categoria: </string>
    <string name="lblPrecio">Precio: </string>

    <!-- Dialog, Snackbar, Toast -->
    <string name="etNueva">Nueva Categoria</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCacelar">Cancelar</string>
    <string name="CancelarCate">Se ha cancelado la operació,</string>

    <!-- Control de Errores -->
    <string name="errorGuardar">Error al Guardar</string>
    <string name="errorProblema">No se puede guardar si hay campos vacios a excepción de la Foto y localización</string>


</resources>