<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_Movimiento">

    <TextView
        android:id="@+id/tvGasto"
        android:layout_width="47dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvGasto"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ptGasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="122dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvFecha"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ptFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGasto" />

    <EditText
        android:id="@+id/ptFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="121dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptGasto"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvMovimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/tvTipo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptFecha" />

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tvCategoria"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvMovimiento"
        app:layout_constraintTop_toBottomOf="@+id/ptFecha" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovimiento">

        <RadioButton
            android:id="@+id/rbIngreso"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/rbIngreso" />

        <RadioButton
            android:id="@+id/rbGasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbGasto" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spCategoria"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoria"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvImporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:text="@string/tvImporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/ptImporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvImporte"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/tvFoto"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="469dp" />

    <ImageView
        android:id="@+id/btnPhoto"
        android:layout_width="149dp"
        android:layout_height="122dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFoto"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:layout_editor_absoluteY="418dp" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="85dp"
        android:layout_height="41dp"
        android:layout_marginStart="319dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnCrear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btLocate"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:text="@string/tvLocalizacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvImporte" />

    <Button
        android:id="@+id/btAddCate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/btCate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/spCategoria" />

    <EditText
        android:id="@+id/ptLat"
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/btLocate"
        app:layout_constraintTop_toBottomOf="@+id/ptImporte" />

    <EditText
        android:id="@+id/ptLong"
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ptLat"
        app:layout_constraintTop_toBottomOf="@+id/ptImporte" />

</androidx.constraintlayout.widget.ConstraintLayout>